update burp-suite-free-edition to 2022.1-beta